# log

./: .gitignore  CMakeLists.txt  README.rst  SConstruct  cmake.ini  lwpID.cc  setup.cfg
.github/workflows/: cmake.yaml
doc/: conf.py  index.rst  mainpage.dox  manifest.yaml
doc/log/: index.rst
doc/lsst.log/: index.rst
examples/: log4cxx.properties  mp.py  test.log.reference
include/lsst/devenv/log/: logInterface.h
include/lsst/log/: Log.h  logInterface.h  lwpID.h
lib/: SConscript
python/lsst/log/: CMakeLists.txt  SConscript  __init__.py  log.cc  log.py  logLib.i  logLib.py  utils.py
python/lsst/log/log/: CMakeLists.txt  PyLogAppender.cc  PyLogAppender.h  PyObjectPtr.h  __init__.py  log.cc  logContinued.py
src/: CMakeLists.txt  Log.cc  PyLogAppender.cc  PyLogAppender.h  PyObjectPtr.h  logInterface.cc  lwpID.cc  lwpID.h
tests/: CMakeLists.txt  SConscript  basicTest.py  cppTest.cc  logTest  logTest.cc  logTest.py  testLog.cc  testLog.py  test_log.py  test_redir.py
ups/: log.cfg  log.table
